--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ group 'com.team1091'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'kotlin'
+apply plugin: 'application'
+mainClassName = "com.team1091.websiteGen.HostKt"
 
 repositories {
     mavenCentral()
@@ -35,4 +37,9 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+task upload(type:JavaExec){
+    classpath sourceSets.main.runtimeClasspath
+    main = "com.team1091.websiteGen.Uploader"
 }
