--- a/build.gradle
+++ b/build.gradle
@@ -23,12 +23,13 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     compile "com.vladsch.flexmark:flexmark-all:0.32.24"
     compile 'azadev.kotlin:aza-kotlin-css:1.0'
     compile "org.jetbrains.kotlinx:kotlinx-html-jvm:0.6.11"
     compile 'commons-io:commons-io:2.6'
     compile 'com.sparkjava:spark-kotlin:1.0.0-alpha'
-    compile 'com.scireum:server-sass:4.1.2'
+//    compile 'com.scireum:server-sass:4.1.2'
     compile 'commons-net:commons-net:3.6'
 }
 
