--- a/build.gradle
+++ b/build.gradle
@@ -24,16 +24,16 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    compile "com.vladsch.flexmark:flexmark-all:0.32.24"
-    compile 'azadev.kotlin:aza-kotlin-css:1.0'
-    compile "org.jetbrains.kotlinx:kotlinx-html-jvm:0.6.11"
+    compile "com.vladsch.flexmark:flexmark-all:0.40.34"
+//    compile 'azadev.kotlin:aza-kotlin-css:1.02'
+    compile "org.jetbrains.kotlinx:kotlinx-html-jvm:0.6.12"
     compile 'commons-io:commons-io:2.6'
 //    compile "com.sparkjava:spark-core:2.7.1"
-    compile 'com.sparkjava:spark-kotlin:1.0.0-alpha'
+    compile 'com.sparkjava:spark-core:2.8.0'
 //    compile 'com.scireum:server-sass:4.1.2'
     compile 'commons-net:commons-net:3.6'
 
-    testCompile 'org.slf4j:slf4j-simple:1.7.25'
+    testCompile 'org.slf4j:slf4j-simple:1.7.26'
 }
 
 compileKotlin {
